--- a/pages/gallery-aws-certification.html
+++ b/pages/gallery-aws-certification.html
@@ -18,7 +18,7 @@
 
   <title>Maulana Kavaldo</title>
   <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience." name="description">
-  <meta content="maulana kavaldo portfolio thk future knowledge g20 bali" name="keywords">
+  <meta content="" name="keywords">
  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
