--- a/pages/project-next-movie-db.html
+++ b/pages/project-next-movie-db.html
@@ -2,151 +2,187 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MovieDB using Next</title>
-  <meta content="" name="description" />
-  <meta content="" name="keywords" />
+  <title>Maulana Kavaldo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon" />
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet" />
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet" />
-
-  <!-- =======================================================
-  * Template Name: MyResume - v4.9.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <div class="col-lg-12">
-          <div class="portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-1.png" alt="" />
+        <div class="row align-items-stretch">
+          <!-- Bagian slider -->
+          <div class="col-md-6">
+            <div class="portfolio-info">
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/the-movie-db.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-1.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-2.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-3.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-4.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-5.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-6.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-7.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-8.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/next-movie-db/slide-9.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
               </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-2.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-3.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-4.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-5.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-7.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-8.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/next-movie-db/slide-9.png" alt="" />
-              </div>
-
             </div>
-            <div class="swiper-pagination"></div>
+          </div>
+
+          <!-- Bagian informasi proyek -->
+          <div class="col-md-6">
+            <div class="portfolio-info">
+              <h3>Project Information</h3>
+              <ul class="list-group">
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Project name</strong></div>
+                  <div class="col-9">: MovieDB</div>
+                </li>
+                <!-- Category -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Category</strong></div>
+                  <div class="col-9">: Website</div>
+                </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class="col-9">: React Developer</div>
+                </li>
+                <!-- Project date -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project date</strong>
+                  </div>
+                  <div class="col-9">
+                    :
+                    September 2023
+                  </div><!-- Project tools -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Tools</strong>
+                  </div>
+                  <div class="col-9">
+                    : VSCode, Git
+                  </div>
+                </li><!-- Project URL -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project URL</strong>
+                  </div>
+                  <div class="col-9">
+                    <a href="https://github.com/maulanakavaldo/bootcamp_technocenter/tree/main/React/day_7_12/batch8-next"
+                      target="_blank">: GitHub</a>
+                  </div>
+                </li>
+                <!-- Uncomment and use as needed for other section -->
+                <!-- <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Demo</strong></div>
+                                    <div class="col-9">
+                                        <a href="#" target="_blank">: </a>
+                                    </div>
+                                </li> -->
+              </ul>
+            </div>
           </div>
         </div>
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-lg-6">
           <div class="portfolio-info">
-            <h3>Project Information</h3>
-            <ul>
-              <li>
-                <strong>Project name</strong> : MovieDB
-              </li>
-              <li><strong>Category</strong> : Website</li>
-              <li><strong>Project date</strong> : September 2023</li>
-              <li>
-                <strong>Project URL</strong> :
-                <a href="#">Github</a>
-              </li>
-              <!-- <li>
-                  <strong>Demo</strong> :
-                  <a href="" target="_blank"
-                    >#</a
-                  >
-                </li> -->
-            </ul>
-            <br />
             <h3>Details</h3>
-            <p>
-              Movie DB is a project developed with Next.js and TypeScript (TSX) that leverages the free API from The
-              Movie DB. The project offers various features that make it easy for users to search for and watch movies
-              while providing a pleasant user experience.
-            </p>
-            <p>
-              Here are the key features available in the Movie DB project:
-            </p>
-            <ul>
-              <li>
-                <strong>Login and Logout:</strong> Users can log in and out of the application using the provided
-                authentication system, ensuring secure access to various features and content.
-              </li>
-
-              <li>
-                <strong>Dark and Light Theme:</strong> The application offers a choice of dark and light themes,
-                allowing users to select according to their preference and lighting conditions.
-              </li>
-
-              <li>
-                <strong>Movie Search:</strong> Users can easily search for their favorite movies using the intuitive
-                search feature, allowing them to find films by title, genre, or other categories.
-              </li>
-
-              <li>
-                <strong>Pagination:</strong> The pagination feature enables users to navigate the list of movies more
-                easily, one page at a time.
-              </li>
-
-              <li>
-                <strong>Side Bar:</strong> The application provides a side bar that can be opened and closed, offering
-                quick access to important menus and other options within the app.
-              </li>
+            <p>Movie DB is a project developed using Next.js and TypeScript (TSX), and it utilizes the free API from
+              The Movie DB. The project offers several features that enhance the user experience, making it easy for
+              users to search for and watch movies.</p>
+            <p>Here are the key features of the Movie DB project:</p>
+            <ul class="list-group mb-4">
+              <li class="list-group-item"><strong>Login and Logout:</strong> Users can securely log in and out of the
+                application using the authentication system, providing access to various features and content.</li>
+              <li class="list-group-item"><strong>Dark and Light Theme:</strong> Users can choose between dark and
+                light themes based on their preference and lighting conditions.</li>
+              <li class="list-group-item"><strong>Movie Search:</strong> Easily search for favorite movies using an
+                intuitive search feature, allowing for searches by title, genre, or other categories.</li>
+              <li class="list-group-item"><strong>Pagination:</strong> Navigate the list of movies more easily with
+                the pagination feature, one page at a time.</li>
+              <li class="list-group-item"><strong>Side Bar:</strong> The application includes a side bar that can be
+                opened and closed, providing quick access to important menus and other options.</li>
             </ul>
-
-            <p>Movie DB provides an efficient and responsive user experience with its practical features. By leveraging
-              the API from The Movie DB, the project grants access to a wide range of current and popular movie
-              information.
+            <p>Movie DB ensures an efficient and responsive user experience with its practical features. By leveraging
+              the API from The Movie DB, users gain access to a broad range of current and popular movie information.
             </p>
-
-
           </div>
         </div>
       </div>
