--- a/pages/project-e-commerce.html
+++ b/pages/project-e-commerce.html
@@ -2,157 +2,225 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>E-commerce using .NET</title>
-  <meta content="" name="description" />
-  <meta content="" name="keywords" />
+  <title>Maulana Kavaldo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon" />
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet" />
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet" />
-
-  <!-- =======================================================
-  * Template Name: MyResume - v4.9.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <div class="col-lg-12">
-          <div class="portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
+        <div class="row align-items-stretch">
+          <!-- Bagian slider -->
+          <div class="col-md-6">
+            <div class="portfolio-info">
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/home.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/home.png" alt="" />
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/ecommerce_api_1.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/ecommerce_api_2.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/category_add form.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/category_add success.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/category_delete.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/category_list.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/category_update.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_add filled.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_add form.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_add success.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_delete.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_list.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_search.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/product_update.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/buy_list.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/buy.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/buy_failed.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/buy_more than stock.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/e-commerce-using-.net/buy_success.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
               </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/ecommerce_api_1.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/ecommerce_api_2.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/category_add form.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/category_add success.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/category_delete.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/category_list.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/category_update.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_add filled.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_add form.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_add success.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_delete.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_list.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_search.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/product_update.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/buy_list.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/buy.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/buy_failed.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/buy_more than stock.png" alt="" />
-              </div>
-
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/e-commerce-using-.net/buy_success.png" alt="" />
-              </div>
-
             </div>
-            <div class="swiper-pagination"></div>
+          </div>
+
+          <!-- Bagian informasi proyek -->
+          <div class="col-md-6">
+            <div class="portfolio-info">
+              <h3>Project Information</h3>
+              <ul class="list-group">
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Project name</strong></div>
+                  <div class="col-9">: E-Commerce</div>
+                </li>
+                <!-- Category -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Category</strong></div>
+                  <div class="col-9">: Web Application</div>
+                </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class="col-9">: Developer</div>
+                </li>
+                <!-- Project date -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project date</strong>
+                  </div>
+                  <div class="col-9">
+                    : October 2023
+                  </div><!-- Project tools -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Tools</strong>
+                  </div>
+                  <div class="col-9">
+                    : Ms. Visual Studio
+                  </div>
+                </li><!-- Project URL -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project URL</strong>
+                  </div>
+                  <div class="col-9">
+                    <a href="https://github.com/maulanakavaldo/bootcamp_technocenter/tree/main/.Net" target="_blank">:
+                      GitHub</a>
+                  </div>
+                </li>
+                <!-- Uncomment and use as needed for other section -->
+                <!-- <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Demo</strong></div>
+                                    <div class="col-9">
+                                        <a href="#" target="_blank">: </a>
+                                    </div>
+                                </li> -->
+              </ul>
+            </div>
           </div>
         </div>
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-lg-6">
           <div class="portfolio-info">
-            <h3>Project Information</h3>
-            <ul>
-              <li>
-                <strong>Project name</strong> : E-Commerce Sederhana
-              </li>
-              <li><strong>Category</strong> : E-Commerce, .NET, API</li>
-              <li><strong>Project date</strong> : October 2023</li>
-              <li>
-                <strong>Project URL</strong> :
-                <a href="https://github.com/maulanakavaldo/">Github</a>
-              </li>
-              <!-- <li>
-                  <strong>Demo</strong> :
-                  <a href="" target="_blank"
-                    >E-Commerce</a
-                  >
-                </li> -->
-            </ul>
-            <br />
             <h3>Details</h3>
             <p>
               User ingin mempunyai sebuah website E-Commerce sederhana yang mempunyai fitur jual beli, Master Tipe
@@ -182,7 +250,6 @@
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
   <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="../assets/vendor/php-email-form/validate.js"></script>
-
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
 </body>
