--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,7 @@
             </div>
           </div>
 
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-european-hotel/european-hotel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1168,7 +1167,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
