--- a/pages/project-web-system-recommendation.html
+++ b/pages/project-web-system-recommendation.html
@@ -65,83 +65,42 @@
                   <img src="../assets/img/portfolio/web-system-recommendation/slide-0.png" alt="" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" role="button"/>
                 </div>
-                <!-- <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt="" />
-                </div>
-
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-2.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-3.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-4.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-5.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-6.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-7.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-8.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-9.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-10.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-11.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-12.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-13.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-14.png" alt="" />
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-15.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-1.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-16.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-2.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-17.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-3.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-18.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-4.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-19.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-5.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-20.png" alt="" />
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-6.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/web-system-recommendation/slide-21.png" alt="" />
-                </div> -->
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-7.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-8.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
+                </div>
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/web-system-recommendation/slide-9.png" alt="" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" role="button"/>
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
