--- a/pages/android-book.html
+++ b/pages/android-book.html
@@ -53,28 +53,21 @@
       <div class="container portfolio-info"> <!-- portfolio-info Disini-->
         <div class="row align-items-stretch">
           <!-- Bagian slider -->
-          <div class="col-md-6">
+          <div class="col-md-6  h-50">
             <div class=""> <!-- portfolio-info Disini-->
-              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+              <div class="portfolio-details-slider swiper h-10"> <!-- border border-primary -->
                 <div class="swiper-wrapper align-items-center">
                   <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide align-items-center">
+                    <video width="100%" height="240" controls>
+                      <source src="../assets/img/portfolio/android-book/video-1.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
                   <div class="swiper-slide">
                     <img src="../assets/img/portfolio/android-book/slide-1.png" alt="Android Room Persistance"
                       data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                   </div>
-                  <div class="swiper-slide">
-                    <video
-                      src="https://github.com/maulanakavaldo/Assign3/blob/master/WhatsApp%20Video%202020-12-22%20at%201.59.11%20PM.mp4"
-                      controls role="button">
-                    </video>
-                  </div>
-                  <div class="swiper-slide">
-                    <iframe
-                      src="https://github.com/maulanakavaldo/Assign3/blob/master/WhatsApp%20Video%202020-12-22%20at%201.59.11%20PM.mp4"
-                      frameborder="0" allowfullscreen></iframe>
-                  </div>
-
-
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -124,13 +117,16 @@
                     <a href="https://github.com/maulanakavaldo/Assign3" target="_blank">: GitHub</a>
                   </div>
                 </li>
-                <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
-                    <div class="col-3"><strong>Demo</strong></div>
-                    <div class="col-9">
-                      <a href="#" target="_blank">: </a>
-                    </div>
-                  </li> -->
+                  <div class="col-3"><strong>Demo</strong></div>
+                  <div class="col-9">
+                    <video width="320" height="240" controls>
+                      <source src="../assets/img/portfolio/android-book/video-1.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                </li> -->
+
               </ul>
             </div>
           </div>
